crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_tpcds_q93_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q93"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                 |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: sumsales ASC NULLS LAST, t.ss_customer_sk ASC NULLS LAST, fetch=100                                                                                                                                                                                                                                                            |
|               |   Projection: t.ss_customer_sk, sum(t.act_sales) AS sumsales                                                                                                                                                                                                                                                                         |
|               |     Aggregate: groupBy=[[t.ss_customer_sk]], aggr=[[sum(t.act_sales)]]                                                                                                                                                                                                                                                               |
|               |       SubqueryAlias: t                                                                                                                                                                                                                                                                                                               |
|               |         Projection: store_sales.ss_customer_sk, CASE WHEN store_returns.sr_return_quantity IS NOT NULL THEN CAST(store_sales.ss_quantity - store_returns.sr_return_quantity AS Decimal128(10, 0)) * store_sales.ss_sales_price ELSE CAST(store_sales.ss_quantity AS Decimal128(10, 0)) * store_sales.ss_sales_price END AS act_sales |
|               |           Inner Join: store_returns.sr_reason_sk = reason.r_reason_sk                                                                                                                                                                                                                                                                |
|               |             Projection: store_sales.ss_customer_sk, store_sales.ss_quantity, store_sales.ss_sales_price, store_returns.sr_reason_sk, store_returns.sr_return_quantity                                                                                                                                                                |
|               |               Left Join: store_sales.ss_item_sk = store_returns.sr_item_sk, store_sales.ss_ticket_number = store_returns.sr_ticket_number                                                                                                                                                                                            |
|               |                 TableScan: store_sales projection=[ss_item_sk, ss_customer_sk, ss_ticket_number, ss_quantity, ss_sales_price]                                                                                                                                                                                                        |
|               |                 TableScan: store_returns projection=[sr_item_sk, sr_reason_sk, sr_ticket_number, sr_return_quantity]                                                                                                                                                                                                                 |
|               |             Projection: reason.r_reason_sk                                                                                                                                                                                                                                                                                           |
|               |               Filter: reason.r_reason_desc = LargeUtf8("Did not get it on time")                                                                                                                                                                                                                                                     |
|               |                 TableScan: reason projection=[r_reason_sk, r_reason_desc], partial_filters=[reason.r_reason_desc = LargeUtf8("Did not get it on time")]                                                                                                                                                                              |
| physical_plan | SortPreservingMergeExec: [sumsales@1 ASC NULLS LAST, ss_customer_sk@0 ASC NULLS LAST], fetch=100                                                                                                                                                                                                                                     |
|               |   SortExec: TopK(fetch=100), expr=[sumsales@1 ASC NULLS LAST, ss_customer_sk@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                         |
|               |     ProjectionExec: expr=[ss_customer_sk@0 as ss_customer_sk, sum(t.act_sales)@1 as sumsales]                                                                                                                                                                                                                                        |
|               |       AggregateExec: mode=FinalPartitioned, gby=[ss_customer_sk@0 as ss_customer_sk], aggr=[sum(t.act_sales)]                                                                                                                                                                                                                        |
|               |         RepartitionExec: partitioning=Hash([ss_customer_sk@0], 32), input_partitions=32                                                                                                                                                                                                                                              |
|               |           AggregateExec: mode=Partial, gby=[ss_customer_sk@0 as ss_customer_sk], aggr=[sum(t.act_sales)]                                                                                                                                                                                                                             |
|               |             ProjectionExec: expr=[ss_customer_sk@0 as ss_customer_sk, CASE WHEN sr_return_quantity@1 IS NOT NULL THEN CAST(ss_quantity@2 - sr_return_quantity@1 AS Decimal128(10, 0)) * ss_sales_price@3 ELSE CAST(ss_quantity@2 AS Decimal128(10, 0)) * ss_sales_price@3 END as act_sales]                                          |
|               |               HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(r_reason_sk@0, sr_reason_sk@3)], projection=[ss_customer_sk@1, sr_return_quantity@5, ss_quantity@2, ss_sales_price@3]                                                                                                         |
|               |                 ProjectionExec: expr=[r_reason_sk@0 as r_reason_sk]                                                                                                                                                                                                                                                                  |
|               |                   SchemaCastScanExec                                                                                                                                                                                                                                                                                                 |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                                                                |
|               |                       FilterExec: r_reason_desc@1 = Did not get it on time AND r_reason_desc@1 = Did not get it on time                                                                                                                                                                                                              |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                                                                           |
|               |                           DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                                                                                 |
|               |                 HashJoinExec: mode=Partitioned, join_type=Right, accumulator=MinMaxLeftAccumulator, on=[(sr_item_sk@0, ss_item_sk@0), (sr_ticket_number@2, ss_ticket_number@2)], projection=[ss_customer_sk@5, ss_quantity@7, ss_sales_price@8, sr_reason_sk@1, sr_return_quantity@3]                                                |
|               |                   RepartitionExec: partitioning=Hash([sr_item_sk@0, sr_ticket_number@2], 32), input_partitions=32                                                                                                                                                                                                                    |
|               |                     SchemaCastScanExec                                                                                                                                                                                                                                                                                               |
|               |                       CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                                                              |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                                                                           |
|               |                           DataSourceExec: file_groups={32 groups: [<redacted>]}, projection=[sr_item_sk, sr_reason_sk, sr_ticket_number, sr_return_quantity], file_type=vortex                                                                                                                                                       |
|               |                   RepartitionExec: partitioning=Hash([ss_item_sk@0, ss_ticket_number@2], 32), input_partitions=32                                                                                                                                                                                                                    |
|               |                     SchemaCastScanExec                                                                                                                                                                                                                                                                                               |
|               |                       CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                                                              |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                                                                           |
|               |                           DataSourceExec: file_groups={32 groups: [<redacted>]}, projection=[ss_item_sk, ss_customer_sk, ss_ticket_number, ss_quantity, ss_sales_price], file_type=vortex                                                                                                                                            |
|               |                                                                                                                                                                                                                                                                                                                                      |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
